# lsproxy

./: .gitattributes  AGENTS.md  ENDPOINT_VALIDATION_RESULTS.md  README.md  RESULTS.md  TASKS.md  WORKSPACE_PATH_ANALYSIS.md  openapi.json
.nuanced/: code-graph.json  files.json
dockerfiles/: base.Dockerfile  clangd.Dockerfile  csharp.Dockerfile  golang.Dockerfile  java.Dockerfile  php.Dockerfile  python.Dockerfile  ruby-3.4.4.Dockerfile  ruby-sorbet-3.4.4.Dockerfile  rust.Dockerfile  service.Dockerfile  typescript.Dockerfile
lsproxy/: ARCHITECTURE_REFACTOR.md  Cargo.toml  Dockerfile  ENDPOINT_VALIDATION_RESULTS.md  TESTS.md
lsproxy/benches/: file_walk_bench.rs
lsproxy/lsp-wrapper/: Cargo.toml  IMPLEMENTATION_PLAN.md
lsproxy/lsp-wrapper/src/: api_types.rs  lsp_process.rs  main.rs  manager.rs
lsproxy/lsp-wrapper/src/ast_grep/: client.rs
lsproxy/lsp-wrapper/src/handlers/: definitions_in_file.rs  error.rs  find_definition.rs  find_identifier.rs  find_referenced_symbols.rs  find_references.rs  mod.rs
lsproxy/lsp-wrapper/src/lsp/: client.rs  mod.rs  process.rs
lsproxy/lsp-wrapper/src/lsp/languages/: mod.rs  python.rs
lsproxy/lsp-wrapper/src/utils/: file_utils.rs  workspace_documents.rs
lsproxy/src/: api_types.rs  lib.rs
lsproxy/src/container/: http_client.rs  mod.rs  orchestrator.rs
lsproxy/src/handlers/: container_proxy.rs  definitions_in_file.rs  (+8 more)
lsproxy/tests/: container_orchestration_test.rs  file_search_test.rs  integration-test.sh  java_test.rs  python_test.rs
release/: Dockerfile  build  build-multiarch.sh
scripts/: release  run2  test.sh
(+13 files in other folders)
